fixed css align center

--- a/css/index.less
+++ b/css/index.less
@@ -516,13 +516,17 @@ img {
                 }
             }
 
+            .right {
+                text-align: center;
+            }
+
             &.overview .content {
                 padding-top: 0;
             }
 
             .partner {
                 padding: 0;
-                float: left;
+                // float: left;
             }
 
             .point-1, .point-2 {
